--- a/app/tpls/navbar.html
+++ b/app/tpls/navbar.html
@@ -1,8 +1,8 @@
-<div class="navbar navbar-inverse" role="navigation">
+<div class="navbar navbar-inverse webpage-navbar" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand">
-                <img src="img/logo.jpg" class="logo">
+                <img src="img/logo.png" class="logo">
             </a>
         </div>
         <div class="navbar-right-side">
